# telegram-to-spotify-playlist-bot

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  verify.py
.github/workflows/: ci.yml  docker-publish.yml
