[project]
name = "telegram-spotify-bot"
version = "0.1.0"
description = "A Telegram bot to add Spotify tracks to a playlist."
authors = [{name = "Oren Segal", email = "Orenssegal_AT_gmail.com"}]
dependencies = [
    "python-telegram-bot>=20.0",
    "spotipy",
    "python-dotenv",
    "requests",
    "pydantic",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
  "build",
  "installer",
]

[tool.setuptools]
packages = ["telegram_spotify_bot"]
